<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cairk.enigmachipper.SetupMachineActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/edit_outer"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        android:ems="10"
        android:hint="@string/edit_outer" />

    <EditText
        android:id="@+id/edit_middle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_outer"
        android:layout_alignLeft="@+id/edit_outer"
        android:ems="10"
        android:hint="@string/edit_middle" />

    <EditText
        android:id="@+id/edit_inner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_middle"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:hint="@string/edit_inner" />

    <Button
        android:id="@+id/done_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_outer"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="85dp"
        android:onClick="SetMachine"
        android:text="@string/done"/>

</RelativeLayout>
